限制了mask，剩余highlight的定位

--- a/今天.html
+++ b/今天.html
@@ -437,8 +437,8 @@
         }
 
         .corner {
-            width: 3em;
-            height: 3em;
+            width: 2em;
+            height: 2em;
             position: absolute;
             z-index: +2;
             background-color: rgba(16, 188, 0, 0.5);
@@ -1353,6 +1353,7 @@
         picContainerStyle.height = 'auto';
         picContainerStyle.marginBottom = 0;
         picContainerStyle.top = 0;
+        mmask.style.height = mainPic.clientHeight + 'px';
     }
 
     //  计算高亮区域的大小
