--- a/今天.html
+++ b/今天.html
@@ -1343,6 +1343,8 @@
 
     //  限制巨瘦的图
     function limitSizeMainPic() {
+        picContainerStyle.width = '100%';
+        picContainerStyle.height = 'auto';
         //  图片宽高比
         var pic_rate = mainPic.clientHeight / mainPic.clientWidth;
         //  控制范围宽高比
@@ -1514,7 +1516,7 @@
         if (rotateIndex % 2) {
             var imgWidth = $productImage.height();
             var imgHeight = $productImage.width();
-            var winWidth =$uploadImg.height();
+            var winWidth = $uploadImg.height();
             var winHeight = $uploadImg.width();
         } else {
             imgWidth = $productImage.width();
